# azure-app-secrets-monitor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-publish.yml  rust-clippy.yml
src/: azure.rs  exporter.rs  main.rs  settings.rs
