[package]
name = "azure-app-secrets-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = "0.4"
config = { version = "0.13", features = ["ini"] }
oauth2 = "4.2"
reqwest = { version = "0.11", features = ["brotli", "gzip", "json"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "parking_lot", "rt"] }
#graph-rs-sdk = "0.2"
